# Used-Codes

./: ConvertPgl2Ply.py  README.md
SGD_classify/: Readme
SGD_classify/calculateBoW/: CMakeLists.txt  calculate_des_over_threshold.cpp  feature_training.cpp  loop_closure.cpp
SGD_classify/calculateBoW/DBow3/: CMakeLists.txt
SGD_classify/calculateBoW/DBow3/src/: BowVector.cpp  CMakeLists.txt  Database.cpp  Database.h  DescManip.cpp  FORB.cpp  FORB.h  FSGD.cpp  FSGD.h  Vocabulary.cpp  Vocabulary.h  eudist_sse.cpp  eudist_sse.hpp  timers.h
SGD_classify/pykmeans/: kmeans.py  recolor_pcdfile.py  sumbowvector.py
pykmeans/: Centers.txt  inertia.txt  kmeans.py  orignLabel.txt  sumbowvector.py
